--- a/src/arrow.html
+++ b/src/arrow.html
@@ -118,7 +118,8 @@
                 this.svg.element.innerHTML = "";
                 this.svg.element.setAttribute("viewBox", `0 0 ${length} ${height}`);
 
-                const body_style = "none";
+                // none, dashed, dotted
+                const body_style = "dotted";
 
                 const bg = new DOM.SVGElement("path", {
                     d: `M 0 ${height / 2} q ${length / 2} ${curve} ${length} 0`,
@@ -133,11 +134,6 @@
                     stroke: "black",
                     "stroke-width": line_width,
                 }).add_to(this.svg);
-                if (body_style === "dashed") {
-                    line.setAttribute("stroke-dasharray", "6");
-                } else if (body_style === "dotted") {
-                    line.setAttribute("stroke-dasharray", "2 4");
-                }
 
                 const defs = new DOM.SVGElement("defs").add_to(this.svg);
                 const clip = new DOM.SVGElement("mask", {
@@ -281,7 +277,40 @@
                     const start_len = bezier.arc_length(start.t) + shorten;
                     const end_len = bezier.arc_length(end.t) - shorten;
                     const full_len = bezier.arc_length(1);
-                    line.set_attribute("stroke-dasharray", `0 ${start_len} ${end_len - start_len} ${full_len - end_len}`);
+                    let actual_line_array = [end_len - start_len];
+                    if (body_style === "dashed") {
+                        // 6
+                        let dashes_and_gaps = (end_len - start_len) / 6;
+                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill(6);
+                        if (dashes_and_gaps % 1 !== 0) {
+                            actual_line_array.push(6 * (dashes_and_gaps % 1));
+                        }
+                        if (actual_line_array.length % 2 !== 1) {
+                            // length of `actual_line_array` should be odd
+                            actual_line_array.push(0);
+                        }
+                    } else if (body_style === "dotted") {
+                        // 2 4
+                        let dashes_and_gaps = (end_len - start_len) / (2 + 4);
+                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill([2, 4]).flat();
+                        if ((dashes_and_gaps / 2) % 1 !== 0) {
+                            let deficit = (end_len - start_len) - Math.floor(dashes_and_gaps) * 6;
+                            for (const l of [2, 4]) {
+                                if (l <= deficit) {
+                                    actual_line_array.push(l);
+                                    deficit -= l;
+                                } else {
+                                    break;
+                                }
+                            }
+                            actual_line_array.push(deficit);
+                            if (actual_line_array.length % 2 !== 1) {
+                                // length of `actual_line_array` should be odd
+                                actual_line_array.push(0);
+                            }
+                        }
+                    }
+                    line.set_attribute("stroke-dasharray", `0 ${start_len} ${actual_line_array.join(" ")} ${full_len - end_len}`);
                     // line.set_attribute("stroke-dashoffset", bezier.arc_length(start.t));
                 }
 
@@ -665,7 +694,7 @@
                 // const heads = Array(10).fill("mono");
 
                 // epi, mono, maps to, harpoon, hook, corner
-                const heads = ["harpoon-top"];
+                const heads = ["epi"];
 
                 // const heads = ["mono", "epi"];
                 // const heads = ["epi", "mono"];
