--- a/src/arrow.html
+++ b/src/arrow.html
@@ -119,7 +119,7 @@
                 this.svg.element.setAttribute("viewBox", `0 0 ${length} ${height}`);
 
                 // none, dashed, dotted
-                const body_style = "dotted";
+                const body_style = "dashed";
 
                 const bg = new DOM.SVGElement("path", {
                     d: `M 0 ${height / 2} q ${length / 2} ${curve} ${length} 0`,
@@ -133,6 +133,7 @@
                     fill: "none",
                     stroke: "black",
                     "stroke-width": line_width,
+                    "stroke-linecap": "round",
                 }).add_to(this.svg);
 
                 const defs = new DOM.SVGElement("defs").add_to(this.svg);
@@ -280,22 +281,25 @@
                     let actual_line_array = [end_len - start_len];
                     if (body_style === "dashed") {
                         // 6
-                        let dashes_and_gaps = (end_len - start_len) / 6;
-                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill(6);
+                        const sum = 6;
+                        let dashes_and_gaps = (end_len - start_len) / sum;
+                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill(sum);
                         if (dashes_and_gaps % 1 !== 0) {
-                            actual_line_array.push(6 * (dashes_and_gaps % 1));
+                            actual_line_array.push(sum * (dashes_and_gaps % 1));
                         }
                         if (actual_line_array.length % 2 !== 1) {
                             // length of `actual_line_array` should be odd
                             actual_line_array.push(0);
                         }
                     } else if (body_style === "dotted") {
+                        const arr = [1, 4];
+                        const sum = arr.reduce((a, b) => a + b, 0);
                         // 2 4
-                        let dashes_and_gaps = (end_len - start_len) / (2 + 4);
-                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill([2, 4]).flat();
-                        if ((dashes_and_gaps / 2) % 1 !== 0) {
-                            let deficit = (end_len - start_len) - Math.floor(dashes_and_gaps) * 6;
-                            for (const l of [2, 4]) {
+                        let dashes_and_gaps = (end_len - start_len) / sum;
+                        actual_line_array = Array(Math.floor(dashes_and_gaps)).fill(arr).flat();
+                        if (dashes_and_gaps % 1 !== 0) {
+                            let deficit = (end_len - start_len) - Math.floor(dashes_and_gaps) * sum;
+                            for (const l of arr) {
                                 if (l <= deficit) {
                                     actual_line_array.push(l);
                                     deficit -= l;
