--- a/src/arrow.html
+++ b/src/arrow.html
@@ -119,7 +119,7 @@
                 this.svg.element.setAttribute("viewBox", `0 0 ${length} ${height}`);
 
                 // none, dashed, dotted
-                const body_style = "dashed";
+                const body_style = "dotted";
 
                 const bg = new DOM.SVGElement("path", {
                     d: `M 0 ${height / 2} q ${length / 2} ${curve} ${length} 0`,
@@ -133,7 +133,7 @@
                     fill: "none",
                     stroke: "black",
                     "stroke-width": line_width,
-                    "stroke-linecap": "round",
+                    "stroke-linecap": "butt", // otherwise we mess up, despite wanting this for dashes
                 }).add_to(this.svg);
 
                 const defs = new DOM.SVGElement("defs").add_to(this.svg);
@@ -292,7 +292,7 @@
                             actual_line_array.push(0);
                         }
                     } else if (body_style === "dotted") {
-                        const arr = [1, 4];
+                        const arr = [2, 4];
                         const sum = arr.reduce((a, b) => a + b, 0);
                         // 2 4
                         let dashes_and_gaps = (end_len - start_len) / sum;
